# unchained

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  unchained.md
.github/workflows/: publish.yml  python-publish.yml
script/jasmine/: manage.py
script/jasmine/jasmine/: asgi.py  settings.py  urls.py  views.py
tests/test_application/backend/: manage.py
tests/test_application/backend/app/: apps.py  settings.py  views.py
tests/test_application/backend/backend/: asgi.py  settings.py
tests/test_command/: test_internal_command.py
tests/test_server/: manage.py
tests/test_server/test_app/: app.py  settings.py  urls.py  views.py
tests/test_server/test_server/: asgi.py  urls.py
tests/test_unchained/: _test_models.py  test_command.py  test_middleware.py  test_routes.py  test_settings.py
tests/test_unchained/unchainedproject/: routes.py  settings.py
tests/test_unchained/unchainedproject/app/: app.py  models.py
tests/test_unchained/unchainedproject/middlewares/: m1.py
unchained/: __main__.py  const.py  type.py  typed.py  types.py
unchained/app/: base.py  registry.py
unchained/apps/: base.py  registry.py
unchained/cli/: main.py
unchained/command/: __init__.py  base.py  entry.py  registry.py
unchained/command/internal/: runserver.py  startapp.py  startproject.py
unchained/conf/: base.py
unchained/core/: __init__.py  applications.py
unchained/http/: response.py
unchained/middleware/: base.py  registry.py
unchained/orm/: models.py  queryset.py  registry.py  utils.py
unchained/protocol/: __init__.py
(+9 files in other folders)
