[tool.poetry]
name = "unchained"
version = "0.0.1"
description = "a django-like async python web framework"
authors = ["xin.zhou <zhouxin576@gmail.com>"]
license = "BSD 3-Clause \"New\" or \"Revised\""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
starlette = "^0.37.2"
pydantic = "^2.6.3"
jinja2 = "^3.1.3"
click = "^8.1.7"
uvicorn = "^0.28.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.3.1"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"

[project.scripts]
unchained-cli = "unchained.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
